# opal-lang

./: .gitignore  Cargo.toml  README.md  ROW_POLYMORPHISM_PLAN.md
.github/workflows/: rust.yml
book/: book.toml
book/src/: SUMMARY.md  cli.md  erlang_ffi.md  functions.md  getting_started.md  if_else.md  installation.md  language_tour.md  lists.md  local_bindings.md  match.md  primitive_types.md  roadmap.md  testing.md  the_standard_library.md  the_zier_programming_language.md  types.md
loupe/: Cargo.toml
loupe/src/: build.rs  main.rs  test.rs
mond/: Cargo.toml
mond-format/src/: pretty.rs  tests.rs
mond-lsp/: Cargo.toml
mond-lsp/src/: lib.rs  tests.rs
mond/src/: build.rs  deps.rs  main.rs  manifest.rs  new.rs  release.rs  test.rs
mondc/src/: ast.rs  codegen.rs  compiler.rs  lexer.rs  lib.rs  lower.rs  project.rs  query.rs  tests.rs  typecheck.rs  warnings.rs
opal-std/src/: io.opal  lib.opal
opalc/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  lower.rs  typecheck.rs
samples/errors/: access_a_field_that_does_not_exist.mond  apply_non_function.mond  apply_non_function.zier  field_access_on_non_record.mond  if_branch_mismatch.mond  if_condition_not_bool.mond  infinite_type.mond  infinite_type.zier  int_op_with_float.mond  let_binding_odd_count.mond  match_arm_type_mismatch.mond  match_missing_arrow.mond  unknown_field.mond  (+4 more)
zier/: Cargo.toml
zier-format/: Cargo.toml
zier-lsp/: Cargo.toml
zier-std/: .gitignore
zier/src/: build.rs  format.rs  gitignore.rs  main.rs  manifest.rs  new.rs  release.rs  resolve.rs  test.rs  utils.rs
zierc/: Cargo.toml
(+47 files in other folders)
